# auto-clicker

./: Cargo.toml  LICENSE  README.md  build.rs  icon.rc
src/: border.rs  main.rs
