[package]
name = "auto_clicker"
authors = ["Sam Jones"]
version = "0.1.13"
edition = "2021"
description = "An auto clicker"
license-file = "LICENSE"
homepage = "https://github.com/LandStander27/auto-clicker/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
lazy_static = "1.4.0"
rand = "0.8.5"
colored = "2.0.4"
device_query = "1.1.3"
inputbot = "0.6.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.51"
features = [
	"Data_Xml_Dom",
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_Console",
]

[build-dependencies]
embed-resource = "2.4.0"
